--- a/assets_css/achievements.css
+++ b/assets_css/achievements.css
@@ -20,7 +20,7 @@
     padding: 20px;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
     background: url('../img/bg2.png') center/cover no-repeat;
-    color: #fff;
+    color: #222;
     overflow: hidden;
 }
 
@@ -106,7 +106,7 @@
     width: 100%;
     background: rgba(0, 0, 0, 0.4);
     border: none;
-    color: #fff;
+    color: #222;
     cursor: pointer;
     font-size: 17px;
     font-weight: bold;
