--- a/assets_css/helperi.css
+++ b/assets_css/helperi.css
@@ -13,7 +13,7 @@
     padding: 5px;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.2);
-    color: #fff;
+    color: #222;
     border-radius: 4px;
 }
 
@@ -68,7 +68,7 @@
     padding: 10px;
     background: url('../img/bg2.png') center/cover no-repeat;
     border: 1px solid #000;
-    color: #fff;
+    color: #222;
     border-radius: 6px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
 }
