--- a/assets_css/mini-profile.css
+++ b/assets_css/mini-profile.css
@@ -76,7 +76,7 @@
     height: 20px;
     border-radius: 50%;
     background: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    color: #222;
     font-size: 0.7em;
     display: flex;
     align-items: center;
@@ -165,7 +165,7 @@
     left: 0;
     right: 0;
     background: rgba(0,0,0,0.6);
-    color: #fff;
+    color: #222;
     font-size: 0.6em;
     text-align: center;
 }
@@ -175,7 +175,7 @@
     top: 2px;
     left: 2px;
     background: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    color: #222;
     font-size: 0.6em;
     padding: 1px 3px;
 }
@@ -217,7 +217,7 @@
     padding: 2px 4px;
     border-radius: 3px;
     font-size: 0.8em;
-    color: #fff;
+    color: #222;
     background: rgba(0,0,0,0.6);
     display: none;
     align-items: center;
@@ -254,7 +254,7 @@
     padding: 10px;
     background: url('../img/bg2.png') center/cover no-repeat;
     border: 1px solid #000;
-    color: #fff;
+    color: #222;
     border-radius: 6px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
 }
